crates/lexer/src/lexer/snapshots/lexer__lexer__tests__raw_string_single_start.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Token(
                RAW_STRING,
            ),
            offset: 0,
        },
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            offset: 8,
        },
    ],
)
