crates/lexer/src/lexer/snapshots/lexer__lexer__tests__raw_string_then_string.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Token(
                RAW_STRING,
            ),
            range: 0..8,
        },
        Lexed {
            kind: Token(
                STRING,
            ),
            range: 8..10,
        },
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            range: 10..10,
        },
    ],
)
