crates/lexer/src/lexer/snapshots/lexer__lexer__tests__string_regular.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Token(
                STRING,
            ),
            offset: 0,
        },
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            offset: 18,
        },
    ],
)
