crates/lexer/src/lexer/snapshots/lexer__lexer__tests__string_space_escape.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Token(
                STRING,
            ),
            range: 0..27,
        },
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            range: 27..27,
        },
    ],
)
