crates/lexer/src/lexer/snapshots/lexer__lexer__tests__symbol.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: SOURCE_SYMBOL,
            offset: 0,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 3,
        },
        Lexed {
            kind: SOURCE_SYMBOL,
            offset: 4,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 7,
        },
        Lexed {
            kind: SOURCE_SYMBOL,
            offset: 8,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 11,
        },
        Lexed {
            kind: SOURCE_SYMBOL,
            offset: 12,
        },
        Lexed {
            kind: END_OF_FILE,
            offset: 15,
        },
    ],
)
