crates/lexer/src/lexer/snapshots/lexer__lexer__tests__upper_source.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Qualified(
                None,
                SOURCE_PROPER,
            ),
            offset: 0,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 5,
        },
        Lexed {
            kind: Qualified(
                None,
                SOURCE_PROPER,
            ),
            offset: 6,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 14,
        },
        Lexed {
            kind: Qualified(
                None,
                SOURCE_PROPER,
            ),
            offset: 15,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 24,
        },
        Lexed {
            kind: Qualified(
                None,
                SOURCE_PROPER,
            ),
            offset: 25,
        },
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            offset: 34,
        },
    ],
)
