crates/lexer/src/lexer/snapshots/lexer__lexer__tests__whitespace.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: WHITESPACE,
            offset: 0,
        },
        Lexed {
            kind: END_OF_FILE,
            offset: 4,
        },
    ],
)
